--- a/packages/components/src/components/tabs/tabs.scss
+++ b/packages/components/src/components/tabs/tabs.scss
@@ -119,7 +119,8 @@
         display: block;
         position: absolute;
         left: 0;
-        height: 2px;
+        width: 16rem;
+        height: 0.2rem;
         background: var(--brand-red-coral);
         transition: all ease-in-out 0.3s;
 
