--- a/packages/core/src/sass/app/_common/components/account-switcher.scss
+++ b/packages/core/src/sass/app/_common/components/account-switcher.scss
@@ -193,6 +193,7 @@
     margin: 0 0.8rem;
     height: 4rem;
     position: relative;
+    line-height: 0.6rem;
 
     &--is-loading {
         position: absolute;
